tests/baselines/reference/decoratorOnInternalModule.errors.txt
decoratorOnInternalModule.ts(3,1): error TS1206: Decorators are not valid here.
decoratorOnInternalModule.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== decoratorOnInternalModule.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~
!!! error TS1206: Decorators are not valid here.
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        
    }